Added a variable that tracks which images have been used, added a few comments

--- a/testconfig.cfg
+++ b/testconfig.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|7|1|58852 testconfig 
+;CANoe Version |4|7|1|58865 testconfig 
 Version: 8.2.98 Build 98
 32 PRO
 5
@@ -715,7 +715,16 @@ VDesktop 3 Begin_Of_Object
 1
 Trace
 {09E7E12D-A97D-4875-B88E-FAC00DBC5477}
-
+Begin_Of_Multi_Line_String
+3
+<?xml version="1.0"?><!--
+
+  Actipro UIStudio Dock Controls
+  Copyright (c) 2001-2006 Actipro Software LLC.  All rights reserved.
+  http://www.ActiproSoftware.com/Products/DotNet/
+
+--><ToolWindowLayout Version="1.0"><LayoutData><HostContainerControl><ToolWindowContainer Dock="Left" Size="329, 593" SelectedToolWindowGuid="32e4b564-02ec-46fd-9296-f6315c198b9d"><ToolWindow Key="{F5E09530-AAE7-48d9-B925-CEF5027AA97D}" Guid="32e4b564-02ec-46fd-9296-f6315c198b9d" DockedSize="325, 325" FloatingSize="325, 380" HasOptions="False" ImageIndex="-1" Text="Symbol Explorer" TitleBarText="Symbol Explorer"><AutoHideStateInfo RootDock="Left" /><DockedInsideHostStateInfo RootDock="Left" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow></ToolWindowContainer></HostContainerControl><AutoHide Dock="Left" /><AutoHide Dock="Right" /><AutoHide Dock="Top" /><AutoHide Dock="Bottom" /><TabbedDocuments Orientation="Horizontal" /><FloatingContainers /><Hidden /></LayoutData><CustomData /></ToolWindowLayout>
+End_Of_Serialized_Data 3
 End_Of_Object VDesktop 3
 VDesktop 3 Begin_Of_Object
 1
@@ -773,7 +782,7 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-0
+1
 0
 0
 1
@@ -946,7 +955,7 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-1
+2
 0
 0
 0
@@ -2375,7 +2384,7 @@ END_OF_DOCK_INFO
 0
 0
 1
-1001 592
+1033 589
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 431 301 1013 595
@@ -2409,7 +2418,7 @@ End_Of_Object VBoxRoot 17
 1 -1 0 0 0 0 0 0 0 0 0 0
 End_Of_Object VUniqueBox 16
 0
-1
+0
 End_Of_Object VNETControlBox 15
 End_Of_Object VNETTraceControlBox 14
 End_Of_Object VTraceConfiguration 13
@@ -2618,7 +2627,7 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-2
+1
 0
 0
 1
@@ -3210,7 +3219,7 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-1
+0
 0
 0
 1
@@ -3379,7 +3388,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-360641199
+1941428278
 0
 NodeSignalPanelBustypeCount 0
 End_Of_Object VSimulationNode 6
@@ -3416,7 +3425,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 0 2 59421 1 280 1 2882400001 710 990 212 666 2882400002  0 0 0 0 0 0 1 2882400001 705 705 214 214 2882400002  0 0 0 82097272 0 82309196   3 
+1 0 2 59421 1 280 1 2882400001 710 990 212 666 2882400002  0 0 0 0 0 0 1 2882400001 705 705 214 214 2882400002  0 0 0 1567112472 0 0   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -3428,11 +3437,13 @@ CAN
 1
 1
 1
-82496664 1 0 1 0 0 1 0 376 36 2000 1 
+607163400 1 0 1 0 0 1 0 376 36 2000 1 
 SS_BEGIN_COMMON_INFO
 1
-2
+3
 Channels
+1
+Databases
 1
 Misc
 1
@@ -4169,7 +4180,7 @@ END_OF_DOCK_INFO
 0
 0
 1
-1001 592
+1033 589
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 502 270 1191 572
@@ -4428,7 +4439,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -1 -1 -1 -1 711 137 998 411
+0 1 -1 -1 -1 -1 710 64 997 338
 1
 1
 0 0
@@ -4548,7 +4559,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -1 -1 -1 -1 104 61 634 624
+0 1 -1 -1 -1 -1 177 64 709 627
 1
 1
 0 0
@@ -4668,7 +4679,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -1 -1 -1 -1 711 412 1367 740
+0 1 -1 -1 -1 -1 710 339 1366 667
 1
 1
 0 0
