tried getting plug-and-play but not working properly yet

--- a/testconfig.cfg
+++ b/testconfig.cfg
@@ -698,7 +698,7 @@ End_Of_Object VPersistentDebuggerOptions 3
 0
 0
 1
-0
+1
 0
 1
 VAFDXGlobalSettings 3 Begin_Of_Object
@@ -751,7 +751,7 @@ Begin_Of_Multi_Line_String
   Copyright (c) 2001-2006 Actipro Software LLC.  All rights reserved.
   http://www.ActiproSoftware.com/Products/DotNet/
 
---><ToolWindowLayout Version="1.0"><LayoutData><HostContainerControl><ToolWindowContainer Dock="Left" Size="401, 593" SelectedToolWindowGuid="32e4b564-02ec-46fd-9296-f6315c198b9d"><ToolWindow Key="{F5E09530-AAE7-48d9-B925-CEF5027AA97D}" Guid="32e4b564-02ec-46fd-9296-f6315c198b9d" DockedSize="397, 325" FloatingSize="325, 380" HasOptions="False" ImageIndex="-1" Text="Symbol Explorer" TitleBarText="Symbol Explorer"><AutoHideStateInfo RootDock="Left" /><DockedInsideHostStateInfo RootDock="Left" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow></ToolWindowContainer></HostContainerControl><AutoHide Dock="Left" /><AutoHide Dock="Right" /><AutoHide Dock="Top" /><AutoHide Dock="Bottom" /><TabbedDocuments Orientation="Horizontal" /><FloatingContainers /><Hidden /></LayoutData><CustomData /></ToolWindowLayout>
+--><ToolWindowLayout Version="1.0"><LayoutData><HostContainerControl><ToolWindowContainer Dock="Left" Size="250, 593" SelectedToolWindowGuid="32e4b564-02ec-46fd-9296-f6315c198b9d"><ToolWindow Key="{F5E09530-AAE7-48d9-B925-CEF5027AA97D}" Guid="32e4b564-02ec-46fd-9296-f6315c198b9d" DockedSize="246, 325" FloatingSize="325, 380" HasOptions="False" ImageIndex="-1" Text="Symbol Explorer" TitleBarText="Symbol Explorer"><AutoHideStateInfo RootDock="Left" /><DockedInsideHostStateInfo RootDock="Left" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow></ToolWindowContainer></HostContainerControl><AutoHide Dock="Left" /><AutoHide Dock="Right" /><AutoHide Dock="Top" /><AutoHide Dock="Bottom" /><TabbedDocuments Orientation="Horizontal" /><FloatingContainers /><Hidden /></LayoutData><CustomData /></ToolWindowLayout>
 End_Of_Serialized_Data 3
 End_Of_Object VDesktop 3
 VDesktop 3 Begin_Of_Object
@@ -781,7 +781,7 @@ VDiagnoseBoxRoot 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 1
-1 2 0 1 0 562 -1 -1 0 0 826 546
+1 1 0 1 -1 -1 -1 -1 22 0 848 572
 EGSM - Diagnostics Console
 1
 
@@ -789,29 +789,29 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 0 0 0 0 192 114 769 458
+0 1 0 0 -1 -1 192 114 769 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-0
+2
 0
 0
 0
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 0 562 -1 -1 0 0 826 546
+0 1 -1 -1 -1 -1 22 0 848 572
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-2
+1
 0
 0
 1
-961 589
+1112 589
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 192 114 769 458
+0 1 0 0 -1 -1 192 114 769 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -862,7 +862,8 @@ ScriptPath=
 DisplayAllParamsInTrace=0
 MaxRequestHistory=10
 RequestHistoryService_0=Hall_Sensors_Read
-RequestHistoryService_1=SG_Seriennummer_Read
+RequestHistoryService_1=Knob_Diagnostic_Read
+RequestHistoryService_2=SG_Seriennummer_Read
 DisplayPduInParameterList=1
 IsTraceLogging=0
 TraceLogfile=traceLog.txt
@@ -885,7 +886,7 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 0 0 0 0 192 114 769 458
+0 1 0 0 -1 -1 192 114 769 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -907,7 +908,7 @@ END_OF_DOCK_INFO
 961 589
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 192 114 769 458
+0 1 0 0 -1 -1 192 114 769 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -925,38 +926,6 @@ END_OF_DESKTOP_MEMBER
 0
 End_Of_Object VBoxRoot 4
 EGSM
-Message_0=<msg><semantic>ReadAllIdentified</semantic><default>1</default><customname></customname><qualifier>FaultMemory_Report_DTC_by_Status_Mask</qualifier><pdu>19 02 09</pdu><params><param><qual>DTCStatusMask</qual><val>48 120 48 57</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestFailed</qual><val>116 114 117 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestFailedThisMonitoringCycle</qual><val>102 97 108 115 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.PendingDtc</qual><val>102 97 108 115 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.ConfirmedDtc</qual><val>116 114 117 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestNotCompletedSinceLastClear</qual><val>102 97 108 115 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestFailedSinceLastClear</qual><val>102 97 108 115 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestNotCompletedThisMonitoringCycle</qual><val>102 97 108 115 101</val></param><param><qu
-=al>DTCStatusMask/DTCStatusMask.WarningIndicatorRequested</qual><val>48 120 48 48</val></param></params></msg>
-Message_1=<msg><semantic>ReadAllSupported</semantic><default>1</default><customname></customname><qualifier>FaultMemory_Report_Supported_DTC</qualifier><pdu>19 0A</pdu><params></params></msg>
-Message_2=<msg><semantic>ReadEnvData</semantic><default>1</default><customname></customname><qualifier>FaultMemory_Report_DTC_Snapshot_Record_by_DTC_Number</qualifier><pdu>19 04 00 00 00 00</pdu><params><param><qual>DTC</qual><val></val></param><param><qual>Snapshot_Record_Numbers</qual><val>48 120 48 48</val></param><param><qual>Snapshot_Record_Numbers/Snapshot_Record_Numbers</qual><val></val></param></params></msg>
-Message_3=<msg><semantic>DeleteSelected</semantic><default>1</default><customname></customname><qualifier>FaultMemory_Clear_Diagnostic_Information</qualifier><pdu>14 00 00 00</pdu><params><param><qual>GroupOfDtc</qual><val>69 109 105 115 115 105 111 110 45 114 101 108 97 116 101 100 32 115 121 115 116 101 109 115</val></param></params></msg>
-Message_4=<msg><semantic>DeleteAll</semantic><default>1</default><customname></customname><qualifier>FaultMemory_Clear_Diagnostic_Information</qualifier><pdu>14 FF FF FF</pdu><params><param><qual>GroupOfDtc</qual><val></val></param></params></msg>
-Module=EGSM
-Display=1
-OptionRequestValueType=1
-DtcViewMode=0
-ActiveDtcRequest=
-DtcCol0Width=54
-DtcColumnSize=167
-StatusColumnSize=245
-DetailsCol0Width=171
-DetailsCol1Width=294
-EnvDataCol0Width=220
-ValueColumnSize=125
-InvalidValueColumnSize=125
-Logfile=dtcLog.txt
-UpdateRate=60.000000
-ShowEnvData=0
-ShowSaeCode=0
-CyclicUpdate=0
-LogDTCs=0
-LogfileIndex=1
-FilterDTCText=
-FilterStatusByte=
-DTCFiltersActive=0
-DtcDeltaLogging=0
-FaultMemContinueOnError=0
-ShowAllDtcEnv=0
 DIAGNOSE_CONTROL_END
 End_Of_Object VDiagnoseBoxRoot 3
 End_Of_Object VErrorMemoryBox 2
@@ -969,7 +938,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 0 0 1 -1 -1 -1 -1 862 1 1362 491
+0 0 0 1 -1 -1 -1 -1 743 0 1243 490
 
 1
 
@@ -988,7 +957,7 @@ END_OF_DOCK_INFO
 1001 592
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 862 1 1362 491
+0 1 -1 -1 -1 -1 743 0 1243 490
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -996,7 +965,7 @@ END_OF_DOCK_INFO
 0
 0
 1
-961 589
+1112 589
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 22 22 953 535
@@ -1467,10 +1436,7 @@ End_Of_Object VTraceFilterCfg 15
 ver=2: FT FT FT FT FT FT
 End_Of_Serialized_Data 14
 2
-1
-14
-ver=2: FT FT FT FT FT
-End_Of_Serialized_Data 14
+0
 3
 1
 14
@@ -3449,7 +3415,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 3 0 1 -1 -1 -1 -1 0 82 713 572
+0 3 0 1 -1 -1 -1 -1 0 82 812 572
 
 1
 
@@ -3461,14 +3427,14 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-2
+0
 0
 0
 1
 1033 589
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 0 82 713 572
+0 1 -1 -1 -1 -1 0 82 812 572
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -3476,7 +3442,7 @@ END_OF_DOCK_INFO
 0
 0
 1
-961 589
+1112 589
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 44 44 975 557
@@ -3538,11 +3504,11 @@ End_Of_Object VGrMnBox 3
 VDOLocalInfoStruct 3 Begin_Of_Object
 3
 1
-89
+94
 VDAOBus 4 Begin_Of_Object
 1
 1
-1
+2
 VDAOGBFunctionBlock 5 Begin_Of_Object
 1
 85
@@ -4150,6 +4116,102 @@ EndOfComment
 0
 1
 End_Of_Object VDAOGBFunctionBlock 5
+VDAOGBFunctionBlock 5 Begin_Of_Object
+1
+94
+3
+TABPredecessor:
+58
+TABSuccessor:
+2
+VSimulationNode 6 Begin_Of_Object
+3
+VProgrammedNode 7 Begin_Of_Object
+4
+VConfigurationRoot 8 Begin_Of_Object
+1
+End_Of_Object VConfigurationRoot 8
+<VFileName V4 QL> 1 "source_files\SendRequests.can" 
+1
+D:\Projektarbete\Git\source_files\SendRequests.cbf
+send_node
+Testdatabase
+5
+ECU 1
+ECU 1
+EOF_TITLE_INFO
+send_node
+1
+0
+1
+1
+0
+1
+0
+1 2 3 0 
+SS_BEGIN_COMMON_INFO
+1
+5
+Behavior
+1
+Buses
+1
+Misc
+1
+Modules
+1
+Timing
+1
+SS_END_COMMON_INFO
+
+EOF_MBSSDATA
+1
+0 1
+0
+EOF_NLDATA
+0
+EOF_ASSEMBLYDATA
+<VFileName V4 QL> 1 "source_files\SendRequests.cbf" 
+VIPBStackSetting 8 Begin_Of_Object
+3
+2
+0
+0
+1
+0
+End_Of_Object VIPBStackSetting 8
+7
+NULL
+End_Of_Serialized_Data 7
+End_Of_Object VProgrammedNode 7
+0
+0
+Startdelay 0 0 0
+Jitter 0 0 1 0 0 0 0
+1
+1 CANOEILNLVECTOR.DLL
+EOF_NLDATA
+3
+VSimulinkModelViewerConfiguration 7 Begin_Of_Object
+2
+<VFileName V4 QL> 1 "source_files\" 
+<VFileName V4 QL> 1 "source_files\" 
+<VFileName V4 QL> 1 "source_files\" 
+150
+0
+End_Of_Object VSimulinkModelViewerConfiguration 7
+1
+0
+197718989
+0
+NodeSignalPanelBustypeCount 0
+End_Of_Object VSimulationNode 6
+NULL
+
+EndOfComment
+0
+1
+End_Of_Object VDAOGBFunctionBlock 5
 1
 VDAOGBFunctionBlock 5 Begin_Of_Object
 1
@@ -4158,7 +4220,7 @@ VDAOGBFunctionBlock 5 Begin_Of_Object
 TABPredecessor:
 85
 TABSuccessor:
-2
+94
 VSimulationNode 6 Begin_Of_Object
 3
 VProgrammedNode 7 Begin_Of_Object
@@ -4237,7 +4299,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-3609609511
+2130864895
 0
 NodeSignalPanelBustypeCount 1
 CAN
@@ -4839,7 +4901,7 @@ VDAOGBFunctionBlock 5 Begin_Of_Object
 2
 0
 TABPredecessor:
-58
+94
 TABSuccessor:
 0
 VCardConf 6 Begin_Of_Object
@@ -4857,7 +4919,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 0 2 59421 1 280 1 2882400001 826 1106 212 666 2882400002  0 0 0 0 0 0 1 2882400001 821 821 214 214 2882400002  0 0 0 244335984 0 244552940   3 
+1 0 2 59421 1 196 1 2882400001 858 1054 212 666 2882400002  0 0 0 0 0 0 1 2882400001 853 853 214 214 2882400002  0 0 0 354331460 354331432 354331256   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -4869,7 +4931,7 @@ CAN
 1
 1
 1
-244803952 1 0 0 0 0 1 0 313 0 2000 1 
+420794536 1 0 1 0 1 1 0 284 36 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 3
@@ -5023,7 +5085,7 @@ False
 String
 NodeSelectionName1
 1
-test_node
+send_node
 Boolean
 NodeSelectionActive1
 False
@@ -5498,7 +5560,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 1 0 1 -1 -1 -1 -1 371 244 1060 546
+1 2 0 1 -1 -1 -1 -1 522 270 1211 572
 Write
 1
 
@@ -5510,22 +5572,22 @@ MDI_DOCK_INFO_END
 6 0 1027 169 0 0 300 180 300 180 0 61440 1 36756 1904 0 0 0 0 260 0 0 0 1 5 32767 1 59422 1 5 1017 174 4 6 518 1 0 1 0 1 169 0 59422 1 
 END_OF_DOCK_INFO
 1
-0
+2
 0
 0
 1
 1033 589
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 371 244 1060 546
+0 1 -1 -1 -1 -1 522 270 1211 572
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-1
+2
 0
 0
 1
-961 589
+1112 589
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 0 402 423 595
@@ -5739,7 +5801,7 @@ VScanBaudrateConfiguration 2 Begin_Of_Object
 1
 End_Of_Object VScanBaudrateConfiguration 2
 4
-3
+4
 VPanelBox 2 Begin_Of_Object
 2
 VUniqueBox 3 Begin_Of_Object
@@ -5773,7 +5835,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -1 -1 -1 -1 710 339 1366 667
+0 1 -32000 -32000 -1 -1 710 339 1366 667
 1
 1
 0 0
@@ -5893,7 +5955,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -1 -1 -1 -1 710 64 997 338
+0 2 -32000 -32000 -1 -1 710 64 997 338
 1
 1
 0 0
@@ -6013,7 +6075,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -1 -1 -1 -1 177 64 709 627
+0 1 -32000 -32000 -1 -1 177 64 709 627
 1
 1
 0 0
@@ -6100,6 +6162,126 @@ End_Of_Object VPanelAdapter 3
 
 End_Of_Serialized_Data 2
 End_Of_Object VPanelBox 2
+VPanelBox 2 Begin_Of_Object
+2
+VUniqueBox 3 Begin_Of_Object
+1
+VBoxRoot 4 Begin_Of_Object
+1
+3
+1 -1 0 1 0 0 0 0 222 114 890 458
+test
+1
+
+MDI_DOCK_INFO_END
+5
+1
+6
+0 1 -1 -1 -1 -1 0 0 384 308
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 0 0 388 312
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 2 22 386 330
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+1
+-1
+1
+0 1 -32000 -32000 -1 -1 378 117 762 425
+1
+1
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 4 44 388 352
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 4 44 392 356
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+0 1
+1
+6
+0 1 -1 -1 -1 -1 6 66 390 374
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 6 66 394 378
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 8 88 392 396
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 8 88 396 400
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 10 110 394 418
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 10 110 398 422
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+END_OF_DESKTOP_MEMBER
+{B1D53426-C11E-45E3-8886-B810B7488854}
+0
+End_Of_Object VBoxRoot 4
+1 -1 0 0 0 0 0 0 0 0 0 0
+End_Of_Object VUniqueBox 3
+2
+VPanelAdapter 3 Begin_Of_Object
+2
+<VFileName V4 QL> 1 "Panel\test.xvp" 
+1
+0
+420901544
+VPanelInfo 4 Begin_Of_Object
+1
+VPanelActiveX 5 Begin_Of_Object
+1
+4294967295
+0
+<VFileName V4 QL> 1 "" 
+0
+End_Of_Object VPanelActiveX 5
+End_Of_Object VPanelInfo 4
+1
+End_Of_Object VPanelAdapter 3
+
+End_Of_Serialized_Data 2
+End_Of_Object VPanelBox 2
 VPersistentPath 2 Begin_Of_Object
 1
 <VFileName V4 QL> 1 "testconfig.cpd" 
@@ -6107,7 +6289,106 @@ End_Of_Object VPersistentPath 2
 0
 3
 0
+1
+VTestSetupBox 2 Begin_Of_Object
+1
+VUniqueBox 3 Begin_Of_Object
+1
+VBoxRoot 4 Begin_Of_Object
+1
+3
+1 -1 0 1 -1 -1 -1 -1 222 114 890 458
+
+1
+
+MDI_DOCK_INFO_END
+5
+1
+6
+0 1 0 0 0 0 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
 0
+-1
+0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+1
+1112 589
+END_OF_DESKTOP_DATA
+6
+0 1 0 0 0 0 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+0 1
+1
+6
+0 1 0 0 0 0 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 0 0 0 0 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 0 0 0 0 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+END_OF_DESKTOP_MEMBER
+{69674809-5AD4-467E-A93F-F54A0627962D}
+0
+End_Of_Object VBoxRoot 4
+1 -1 0 0 0 0 0 0 0 0 0 0
+End_Of_Object VUniqueBox 3
+1
+2 0
+0
+
+END_OF_TEST_SETUP_DATA
+END_OF_TEST_SETUP_BOX
+End_Of_Object VTestSetupBox 2
 VPlugInsPersistentWrapper 2 Begin_Of_Object
 1
 <PlugIns/>
@@ -6862,8 +7143,10 @@ HistoryEnd
 FiltersBegin
 Begin
 3 0 1
-1
+2
 SPA0510_140107_PropulsionCANhs
+ ( 2 ( 0 ) 0 ) 
+Testdatabase
  ( 2 ( 0 ) 0 ) 
 SymbSelHeaderMgrBegin
 1 7
@@ -51347,7 +51630,7 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 0 0 0 0 192 114 769 458
+0 1 0 0 -1 -1 192 114 769 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -51369,7 +51652,7 @@ END_OF_DOCK_INFO
 961 589
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 192 114 769 458
+0 1 0 0 -1 -1 192 114 769 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -51384,7 +51667,7 @@ END_OF_DESKTOP_DATA_COLLECTION
 0 1
 1
 6
-0 1 0 0 0 0 192 114 769 458
+0 1 0 0 -1 -1 192 114 769 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -51395,7 +51678,7 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 192 114 769 458
+0 1 0 0 -1 -1 192 114 769 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -51406,7 +51689,7 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 192 114 769 458
+0 1 0 0 -1 -1 192 114 769 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
