--- a/testconfig.cfg
+++ b/testconfig.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|7|1|42484 testconfig 
+;CANoe Version |4|7|1|58848 testconfig 
 Version: 8.2.98 Build 98
 32 PRO
 5
@@ -21,15 +21,6 @@ ResetSignalsOnMeasurementStart=1
 VDatabaseContainerStreamer 3 Begin_Of_Object
 5
 1
-<VFileName V4 QL> 1 "source_files\Testdatabase.dbc" 
-Testdatabase
-
-1 1
-0
-1
-0
-1
-
 End_Of_Object VDatabaseContainerStreamer 3
 0
 0
@@ -368,9 +359,14 @@ EOO
 DiagnosticsSettingsV1.1
 <VFileName V4 QL> 1 "EGSM.cdd" 
 Base_Variant#en-US#CAN#CAN##EGSM
+<VFileName V4 QL> 1 "D3058_AGSM_E2A_R5_P952.cdd" 
+CommonDiagnostics#en-US#Diagnostic_CAN_Protocol_HS#CAN##_952_AGSM_Automatic_Gearbox_Shifter_Module
 EOO
 DiagnosticsSettingsV2.0
 EGSM
+.C#######0x00#1
+.T#1;0
+_952_AGSM_Automatic_Gearbox_Shifter_Module
 .C#######0x00#1
 .T#1;0
 EOO
@@ -773,7 +769,7 @@ End_Of_Object VDesktop 3
 4294967295
 4294967295
 End_Of_Object VDesktopManager 2
-2
+4
 VDiagnoseBox 2 Begin_Of_Object
 1
 VDiagnoseBoxRoot 3 Begin_Of_Object
@@ -781,7 +777,7 @@ VDiagnoseBoxRoot 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 1
-1 1 0 1 -1 -1 -1 -1 22 0 848 572
+1 2 0 1 -1 -1 -1 -1 16 542 842 1114
 EGSM - Diagnostics Console
 1
 
@@ -800,11 +796,11 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 22 0 848 572
+0 1 -1 -1 -1 -1 16 542 842 1114
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-1
+2
 0
 0
 1
@@ -929,6 +925,190 @@ EGSM
 DIAGNOSE_CONTROL_END
 End_Of_Object VDiagnoseBoxRoot 3
 End_Of_Object VErrorMemoryBox 2
+VDiagnoseBox 2 Begin_Of_Object
+1
+VDiagnoseBoxRoot 3 Begin_Of_Object
+1
+VBoxRoot 4 Begin_Of_Object
+1
+1
+1 1 0 1 0 538 -1 -1 516 542 1274 1114
+_952_AGSM_Automatic_Gearbox_Shifter_Module - Diagnostics Console
+1
+
+MDI_DOCK_INFO_END
+5
+1
+6
+0 1 0 0 0 0 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 0 538 -1 -1 516 542 1274 1114
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+1
+1
+0
+0
+1
+1112 589
+END_OF_DESKTOP_DATA
+6
+0 1 0 0 0 0 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+0 0
+END_OF_DESKTOP_MEMBER
+{402D518A-DB06-4FA8-AC7F-E2FBF5A82251}
+0
+End_Of_Object VBoxRoot 4
+_952_AGSM_Automatic_Gearbox_Shifter_Module
+Module=_952_AGSM_Automatic_Gearbox_Shifter_Module
+Display=0
+ParamCol0Width=20
+ParamCol1Width=67
+ParamCol2Width=67
+ParamCol3Width=50
+TraceCol0Width=20
+TraceCol1Width=66
+TraceCol2Width=104
+ParamPositionColumn=0
+ParamUnitColumn=1
+ParamTypeColumn=0
+ParamIdentifierColumn=0
+ParamCommentColumn=0
+ParamColumnCount=4
+ParamNameColumnIndex=1
+ParamValueColumnIndex=2
+ParamUnitColumnIndex=3
+UdsSuppressPosResp=0
+StringParamPadding=1
+Split1=409
+Split2=187
+AutoUpdateParams=0
+ServiceDisplayStyle=0
+ViewMode=0
+ServiceShowIndex=1
+ServiceShowRawPrefix=1
+ServiceSortingType=0
+DisplayParamPosLengthInTrace=0
+ScriptPath=
+DisplayAllParamsInTrace=0
+MaxRequestHistory=10
+DisplayPduInParameterList=1
+IsTraceLogging=0
+TraceLogfile=traceLog.txt
+TraceLogfileIndex=1
+DIAGNOSE_CONTROL_END
+End_Of_Object VDiagnoseBoxRoot 3
+End_Of_Object VDiagnoseBox 2
+VErrorMemoryBox 2 Begin_Of_Object
+1
+VDiagnoseBoxRoot 3 Begin_Of_Object
+1
+VBoxRoot 4 Begin_Of_Object
+1
+1
+1 -1 0 1 -1 -1 -1 -1 171 169 839 607
+_952_AGSM_Automatic_Gearbox_Shifter_Module - Fault Memory
+1
+
+MDI_DOCK_INFO_END
+5
+1
+6
+0 1 0 0 0 0 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 171 169 839 607
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+1
+1112 589
+END_OF_DESKTOP_DATA
+6
+0 1 0 0 0 0 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+0 0
+END_OF_DESKTOP_MEMBER
+{B29AB93C-FF0A-4F3D-94EA-6CD65605757C}
+0
+End_Of_Object VBoxRoot 4
+_952_AGSM_Automatic_Gearbox_Shifter_Module
+Message_0=<msg><semantic>ReadAllIdentified</semantic><default>1</default><customname></customname><qualifier>FaultMem_SUBF_02</qualifier><pdu>19 02 09</pdu><params><param><qual>DTCStatusMask</qual><val>48 120 48 57</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestFailed</qual><val>116 114 117 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestFailedThisMonitoringCycle</qual><val>102 97 108 115 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.PendingDTC</qual><val>102 97 108 115 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.ConfirmedDTC</qual><val>116 114 117 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestNotCompletedSinceLastClear</qual><val>48 120 48 48</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestFailedSinceLastClear</qual><val>48 120 48 48</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestNotCompletedThisMonitoringCycle</qual><val>102 97 108 115 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.Wa
+=rningIndicatorRequested</qual><val>102 97 108 115 101</val></param></params></msg>
+Message_1=<msg><semantic>ReadAllSupported</semantic><default>1</default><customname></customname><qualifier></qualifier><pdu>19 0A</pdu><params></params></msg>
+Message_2=<msg><semantic>ReadEnvData</semantic><default>1</default><customname></customname><qualifier>FaultMem_SUBF_04</qualifier><pdu>19 04 00 00 00 00</pdu><params><param><qual>DTCTable</qual><val></val></param><param><qual>DTCSnapshotRecordNumber</qual><val>82 101 99 111 114 100 32 35 49</val></param></params></msg>
+Message_3=<msg><semantic>DeleteSelected</semantic><default>1</default><customname></customname><qualifier>FaultMem_Clear</qualifier><pdu>14 00 00 00</pdu><params><param><qual>GroupOfDtc</qual><val></val></param></params></msg>
+Message_4=<msg><semantic>DeleteAll</semantic><default>1</default><customname></customname><qualifier>FaultMem_Clear</qualifier><pdu>14 FF FF FF</pdu><params><param><qual>GroupOfDtc</qual><val>65 108 108 32 71 114 111 117 112 115</val></param></params></msg>
+Module=_952_AGSM_Automatic_Gearbox_Shifter_Module
+Display=1
+OptionRequestValueType=1
+DtcViewMode=0
+ActiveDtcRequest=
+DtcCol0Width=54
+DtcColumnSize=167
+StatusColumnSize=245
+DetailsCol0Width=171
+DetailsCol1Width=294
+EnvDataCol0Width=220
+ValueColumnSize=125
+InvalidValueColumnSize=125
+Logfile=dtcLog.txt
+UpdateRate=60.000000
+ShowEnvData=0
+ShowSaeCode=0
+CyclicUpdate=0
+LogDTCs=0
+LogfileIndex=1
+FilterDTCText=
+FilterStatusByte=
+DTCFiltersActive=0
+DtcDeltaLogging=0
+FaultMemContinueOnError=0
+ShowAllDtcEnv=0
+DIAGNOSE_CONTROL_END
+End_Of_Object VDiagnoseBoxRoot 3
+End_Of_Object VErrorMemoryBox 2
 VGBAnlyzBox 2 Begin_Of_Object
 2
 VGrMnBox 3 Begin_Of_Object
@@ -938,7 +1118,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 0 0 1 -1 -1 -1 -1 743 0 1243 490
+0 0 0 1 -1 -1 -1 -1 599 0 1099 490
 
 1
 
@@ -957,7 +1137,7 @@ END_OF_DOCK_INFO
 1001 592
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 743 0 1243 490
+0 1 -1 -1 -1 -1 599 0 1099 490
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -1440,7 +1620,7 @@ End_Of_Serialized_Data 14
 3
 1
 14
-ver=2;EGSM:F:T
+ver=2;EGSM:F:T;_952_AGSM_Automatic_Gearbox_Shifter_Module:F:T
 End_Of_Serialized_Data 14
 4
 0
@@ -2480,40 +2660,6 @@ End_Of_Object VTraceColumnConfiguration 15
 0
 VTraceControlFixedModeExpansionItems 15 Begin_Of_Object
 3
-1
-VConfigMessage 16 Begin_Of_Object
-4
-VConfigBusObject 17 Begin_Of_Object
-1
-VConfigBusEvent 18 Begin_Of_Object
-1
-VConfigEvent 19 Begin_Of_Object
-1
-End_Of_Object VConfigEvent 19
-1
-1
-End_Of_Object VConfigBusEvent 18
-End_Of_Object VConfigBusObject 17
-9
-1
-VDatabaseBusMessageId 17 Begin_Of_Object
-2
-1587
-1
-1
-0
-0
-0
-EgsmToVddmPropDiagResFrame
-0
-Testdatabase
-0
-End_Of_Object VDatabaseBusMessageId 17
-NULL
-0
-0
-0
-End_Of_Object VConfigMessage 16
 0
 End_Of_Object VTraceControlFixedModeExpansionItems 15
 14
@@ -3415,7 +3561,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 3 0 1 -1 -1 -1 -1 0 82 812 572
+0 3 0 1 -1 -1 -1 -1 -144 82 668 572
 
 1
 
@@ -3434,7 +3580,7 @@ END_OF_DOCK_INFO
 1033 589
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 0 82 812 572
+0 1 -1 -1 -1 -1 -144 82 668 572
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -3964,23 +4110,7 @@ VG_END_OF_EXPORT
 VG_END_OF_GEN_COLL
 1
 0
-4
-1
-identifier2
-31 8 0
-GT_RECORD_END
-1
-identidier1
-23 8 0
-GT_RECORD_END
-1
-service
-15 8 0
-GT_RECORD_END
-1
-req_length
-7 8 0
-GT_RECORD_END
+0
 
 GT_GATEWAY_TRIGGER_END
 
@@ -4188,8 +4318,7 @@ End_Of_Object VProgrammedNode 7
 0
 Startdelay 0 0 0
 Jitter 0 0 1 0 0 0 0
-1
-1 CANOEILNLVECTOR.DLL
+0
 EOF_NLDATA
 3
 VSimulinkModelViewerConfiguration 7 Begin_Of_Object
@@ -4202,7 +4331,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-197718989
+941197716
 0
 NodeSignalPanelBustypeCount 0
 End_Of_Object VSimulationNode 6
@@ -4248,14 +4377,12 @@ receiver_node
 1 2 4 0 
 SS_BEGIN_COMMON_INFO
 1
-5
+4
 Behavior
 1
 Buses
 1
 Misc
-1
-Modules
 1
 Timing
 1
@@ -4285,8 +4412,7 @@ End_Of_Object VProgrammedNode 7
 0
 Startdelay 0 0 0
 Jitter 0 0 1 0 0 0 0
-1
-1 CANOEILNLVECTOR.DLL
+0
 EOF_NLDATA
 3
 VSimulinkModelViewerConfiguration 7 Begin_Of_Object
@@ -4299,7 +4425,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-2130864895
+3323148591
 0
 NodeSignalPanelBustypeCount 1
 CAN
@@ -4919,7 +5045,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 0 2 59421 1 196 1 2882400001 858 1054 212 666 2882400002  0 0 0 0 0 0 1 2882400001 853 853 214 214 2882400002  0 0 0 354331460 354331432 354331256   3 
+1 0 2 59421 1 196 1 2882400001 714 910 212 666 2882400002  0 0 0 0 0 0 1 2882400001 709 709 214 214 2882400002  0 0 0 420287136 425088800 354331348   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -4931,13 +5057,11 @@ CAN
 1
 1
 1
-420794536 1 0 1 0 1 1 0 284 36 2000 1 
+420794536 1 0 1 0 1 1 0 284 37 2000 1 
 SS_BEGIN_COMMON_INFO
 1
-3
+2
 Channels
-1
-Databases
 1
 Misc
 1
@@ -5049,7 +5173,7 @@ End_Of_Object VUniqueBox 3
 1 -1 0 0 0 0 0 0 0 0 0 0
 0
 End_Of_Object VNETControlBox 2
-498
+484
 APPDIR Vector.CANoe.NodeSignalPanel.DLL
 Vector.CANoe.NodeSignalPanel, Version=8.2.98.0, Culture=neutral, PublicKeyToken=null
 Vector.CANoe.NodeSignalPanel.VMainApplication
@@ -5074,21 +5198,7 @@ BusType
 1
 Int32
 NodeSelectionCount
-2
-String
-NodeSelectionName0
-1
-receiver_node
-Boolean
-NodeSelectionActive0
-False
-String
-NodeSelectionName1
-1
-send_node
-Boolean
-NodeSelectionActive1
-False
+0
 APPDIR CANoe_Net.DLL
 CANoe_Net, Version=8.2.98.0, Culture=neutral, PublicKeyToken=null
 Vector.CANalyzer.ApplicationSerializer
@@ -5560,7 +5670,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 2 0 1 -1 -1 -1 -1 522 270 1211 572
+1 4 0 1 -1 -1 -1 -1 385 239 1074 541
 Write
 1
 
@@ -5579,11 +5689,11 @@ END_OF_DOCK_INFO
 1033 589
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 522 270 1211 572
+0 1 -1 -1 -1 -1 385 239 1074 541
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-2
+4
 0
 0
 1
@@ -5664,7 +5774,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 2 3 -1 -1 -1 -1 -10000 -10000 -8982 -9233
+22 2 3 -32000 -32000 -1 -1 -10000 -10000 -8982 -9233
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -5835,7 +5945,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -32000 -32000 -1 -1 710 339 1366 667
+0 1 -32000 -32000 -1 -1 756 278 1412 606
 1
 1
 0 0
@@ -5955,7 +6065,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 2 -32000 -32000 -1 -1 710 64 997 338
+0 1 -1 -1 -1 -1 710 64 997 338
 1
 1
 0 0
@@ -6192,7 +6302,7 @@ END_OF_DESKTOP_DATA
 0 1 -1 -1 -1 -1 2 22 386 330
 6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
-1
+0
 -1
 1
 0 1 -32000 -32000 -1 -1 378 117 762 425
@@ -51611,7 +51721,7 @@ VHILInterfaceMgrAnlyz 2 Begin_Of_Object
 0
 3030
 End_Of_Object VHILInterfaceMgrAnlyz 2
-1
+2
 Begin_Of_Object VNetDiagComponent
 VNETStandaloneComponent 2 Begin_Of_Object
 1
@@ -51731,6 +51841,148 @@ String
 EcuName
 1
 EGSM
+APPDIR Components\Vector.CANalyzer.Serialization\1.5.0.0\Vector.CANalyzer.Serialization.dll
+Vector.CANalyzer.Serialization, Version=1.5.0.0, Culture=neutral, PublicKeyToken=b273882a063429a6
+Vector.CANalyzer.Serialization.SerializationVersion
+3
+SerializationVersion
+3
+UInt16
+mMajor
+4
+UInt16
+mMinor
+2
+UInt16
+mPatch
+12
+--TextFormatter: End of Object--
+--TextFormatter: End of Object--
+TypeRef:2
+2
+--TextFormatter: End of Object--
+End_Of_Object VNETStandaloneComponent 2
+VEcuSessionCtrlComponent
+End_Of_Object VNetDiagComponent
+Begin_Of_Object VNetDiagComponent
+VNETStandaloneComponent 2 Begin_Of_Object
+1
+VNETControlBox 3 Begin_Of_Object
+2
+VUniqueBox 4 Begin_Of_Object
+1
+VBoxRoot 5 Begin_Of_Object
+1
+3
+1 -1 0 1 -1 -1 -1 -1 292 -13 544 572
+_952_AGSM_Automatic_Gearbox_Shifter_Module - Diagnostic Session Control
+1
+
+MDI_DOCK_INFO_END
+5
+1
+6
+0 1 0 0 0 0 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 292 -13 544 572
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+0
+1112 589
+END_OF_DESKTOP_DATA
+6
+0 1 0 0 0 0 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+0 1
+1
+6
+0 1 0 0 0 0 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 0 0 0 0 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 0 0 0 0 222 114 890 458
+6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+0
+0
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+END_OF_DESKTOP_MEMBER
+{1694B892-C907-4799-B2D2-B8E13B20B251}
+0
+End_Of_Object VBoxRoot 5
+1 -1 0 0 0 0 0 0 0 0 0 0
+End_Of_Object VUniqueBox 4
+1
+1 -1 0 0 0 0 0 0 0 0 0 0
+0
+End_Of_Object VNETControlBox 3
+39
+APPDIR Vector.CANalyzer.EcuSessionControl.DLL
+Vector.CANalyzer.EcuSessionControl, Version=8.2.98.0, Culture=neutral, PublicKeyToken=null
+Vector.CANalyzer.EcuSessionControl.EscWrapper
+1
+1
+APPDIR CANoe_Net.DLL
+CANoe_Net, Version=8.2.98.0, Culture=neutral, PublicKeyToken=null
+Vector.CANalyzer.ApplicationSerializer
+2
+Application
+2
+String
+Title
+1
+Diagnostic Session Control
+String
+EcuName
+1
+_952_AGSM_Automatic_Gearbox_Shifter_Module
 APPDIR Components\Vector.CANalyzer.Serialization\1.5.0.0\Vector.CANalyzer.Serialization.dll
 Vector.CANalyzer.Serialization, Version=1.5.0.0, Culture=neutral, PublicKeyToken=b273882a063429a6
 Vector.CANalyzer.Serialization.SerializationVersion
