--- a/testconfig.cfg
+++ b/testconfig.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|7|1|58848 testconfig 
+;CANoe Version |4|7|1|58853 testconfig 
 Version: 8.2.98 Build 98
 32 PRO
 5
@@ -21,6 +21,15 @@ ResetSignalsOnMeasurementStart=1
 VDatabaseContainerStreamer 3 Begin_Of_Object
 5
 1
+<VFileName V4 QL> 1 "source_files\Testdatabase.dbc" 
+Testdatabase
+
+1 1
+0
+1
+0
+1
+
 End_Of_Object VDatabaseContainerStreamer 3
 0
 0
@@ -932,7 +941,7 @@ VDiagnoseBoxRoot 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 1
-1 1 0 1 0 538 -1 -1 516 542 1274 1114
+1 1 0 1 -1 -1 -1 -1 516 542 1274 1114
 _952_AGSM_Automatic_Gearbox_Shifter_Module - Diagnostics Console
 1
 
@@ -940,7 +949,7 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 0 0 0 0 222 114 890 458
+0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -951,7 +960,7 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 0 538 -1 -1 516 542 1274 1114
+0 1 -1 -1 -1 -1 516 542 1274 1114
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -962,7 +971,7 @@ END_OF_DOCK_INFO
 1112 589
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 222 114 890 458
+0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -1034,7 +1043,7 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 0 0 0 0 222 114 890 458
+0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -1056,7 +1065,7 @@ END_OF_DOCK_INFO
 1112 589
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 222 114 890 458
+0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -1074,38 +1083,6 @@ END_OF_DESKTOP_MEMBER
 0
 End_Of_Object VBoxRoot 4
 _952_AGSM_Automatic_Gearbox_Shifter_Module
-Message_0=<msg><semantic>ReadAllIdentified</semantic><default>1</default><customname></customname><qualifier>FaultMem_SUBF_02</qualifier><pdu>19 02 09</pdu><params><param><qual>DTCStatusMask</qual><val>48 120 48 57</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestFailed</qual><val>116 114 117 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestFailedThisMonitoringCycle</qual><val>102 97 108 115 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.PendingDTC</qual><val>102 97 108 115 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.ConfirmedDTC</qual><val>116 114 117 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestNotCompletedSinceLastClear</qual><val>48 120 48 48</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestFailedSinceLastClear</qual><val>48 120 48 48</val></param><param><qual>DTCStatusMask/DTCStatusMask.TestNotCompletedThisMonitoringCycle</qual><val>102 97 108 115 101</val></param><param><qual>DTCStatusMask/DTCStatusMask.Wa
-=rningIndicatorRequested</qual><val>102 97 108 115 101</val></param></params></msg>
-Message_1=<msg><semantic>ReadAllSupported</semantic><default>1</default><customname></customname><qualifier></qualifier><pdu>19 0A</pdu><params></params></msg>
-Message_2=<msg><semantic>ReadEnvData</semantic><default>1</default><customname></customname><qualifier>FaultMem_SUBF_04</qualifier><pdu>19 04 00 00 00 00</pdu><params><param><qual>DTCTable</qual><val></val></param><param><qual>DTCSnapshotRecordNumber</qual><val>82 101 99 111 114 100 32 35 49</val></param></params></msg>
-Message_3=<msg><semantic>DeleteSelected</semantic><default>1</default><customname></customname><qualifier>FaultMem_Clear</qualifier><pdu>14 00 00 00</pdu><params><param><qual>GroupOfDtc</qual><val></val></param></params></msg>
-Message_4=<msg><semantic>DeleteAll</semantic><default>1</default><customname></customname><qualifier>FaultMem_Clear</qualifier><pdu>14 FF FF FF</pdu><params><param><qual>GroupOfDtc</qual><val>65 108 108 32 71 114 111 117 112 115</val></param></params></msg>
-Module=_952_AGSM_Automatic_Gearbox_Shifter_Module
-Display=1
-OptionRequestValueType=1
-DtcViewMode=0
-ActiveDtcRequest=
-DtcCol0Width=54
-DtcColumnSize=167
-StatusColumnSize=245
-DetailsCol0Width=171
-DetailsCol1Width=294
-EnvDataCol0Width=220
-ValueColumnSize=125
-InvalidValueColumnSize=125
-Logfile=dtcLog.txt
-UpdateRate=60.000000
-ShowEnvData=0
-ShowSaeCode=0
-CyclicUpdate=0
-LogDTCs=0
-LogfileIndex=1
-FilterDTCText=
-FilterStatusByte=
-DTCFiltersActive=0
-DtcDeltaLogging=0
-FaultMemContinueOnError=0
-ShowAllDtcEnv=0
 DIAGNOSE_CONTROL_END
 End_Of_Object VDiagnoseBoxRoot 3
 End_Of_Object VErrorMemoryBox 2
@@ -2660,6 +2637,40 @@ End_Of_Object VTraceColumnConfiguration 15
 0
 VTraceControlFixedModeExpansionItems 15 Begin_Of_Object
 3
+1
+VConfigMessage 16 Begin_Of_Object
+4
+VConfigBusObject 17 Begin_Of_Object
+1
+VConfigBusEvent 18 Begin_Of_Object
+1
+VConfigEvent 19 Begin_Of_Object
+1
+End_Of_Object VConfigEvent 19
+1
+1
+End_Of_Object VConfigBusEvent 18
+End_Of_Object VConfigBusObject 17
+9
+1
+VDatabaseBusMessageId 17 Begin_Of_Object
+2
+1587
+1
+1
+0
+0
+0
+EgsmToVddmPropDiagResFrame
+0
+Testdatabase
+0
+End_Of_Object VDatabaseBusMessageId 17
+NULL
+0
+0
+0
+End_Of_Object VConfigMessage 16
 0
 End_Of_Object VTraceControlFixedModeExpansionItems 15
 14
@@ -3561,7 +3572,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 3 0 1 -1 -1 -1 -1 -144 82 668 572
+0 4 0 1 -1 -1 -1 -1 -144 82 668 572
 
 1
 
@@ -3584,7 +3595,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-3
+4
 0
 0
 1
@@ -3650,7 +3661,7 @@ End_Of_Object VGrMnBox 3
 VDOLocalInfoStruct 3 Begin_Of_Object
 3
 1
-94
+100
 VDAOBus 4 Begin_Of_Object
 1
 1
@@ -4110,7 +4121,23 @@ VG_END_OF_EXPORT
 VG_END_OF_GEN_COLL
 1
 0
-0
+4
+1
+identifier2
+31 8 0
+GT_RECORD_END
+1
+identidier1
+23 8 0
+GT_RECORD_END
+1
+service
+15 8 0
+GT_RECORD_END
+1
+req_length
+7 8 0
+GT_RECORD_END
 
 GT_GATEWAY_TRIGGER_END
 
@@ -4253,7 +4280,7 @@ VDAOGBFunctionBlock 5 Begin_Of_Object
 TABPredecessor:
 58
 TABSuccessor:
-2
+100
 VSimulationNode 6 Begin_Of_Object
 3
 VProgrammedNode 7 Begin_Of_Object
@@ -4318,7 +4345,8 @@ End_Of_Object VProgrammedNode 7
 0
 Startdelay 0 0 0
 Jitter 0 0 1 0 0 0 0
-0
+1
+1 CANOEILNLVECTOR.DLL
 EOF_NLDATA
 3
 VSimulinkModelViewerConfiguration 7 Begin_Of_Object
@@ -4331,7 +4359,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-941197716
+2118121266
 0
 NodeSignalPanelBustypeCount 0
 End_Of_Object VSimulationNode 6
@@ -4341,7 +4369,7 @@ EndOfComment
 0
 1
 End_Of_Object VDAOGBFunctionBlock 5
-1
+2
 VDAOGBFunctionBlock 5 Begin_Of_Object
 1
 58
@@ -4412,7 +4440,8 @@ End_Of_Object VProgrammedNode 7
 0
 Startdelay 0 0 0
 Jitter 0 0 1 0 0 0 0
-0
+1
+1 CANOEILNLVECTOR.DLL
 EOF_NLDATA
 3
 VSimulinkModelViewerConfiguration 7 Begin_Of_Object
@@ -5018,6 +5047,99 @@ EndOfComment
 0
 1
 End_Of_Object VDAOGBFunctionBlock 5
+VDAOGBFunctionBlock 5 Begin_Of_Object
+1
+100
+3
+TABPredecessor:
+94
+TABSuccessor:
+2
+VSimulationNode 6 Begin_Of_Object
+3
+VProgrammedNode 7 Begin_Of_Object
+4
+VConfigurationRoot 8 Begin_Of_Object
+1
+End_Of_Object VConfigurationRoot 8
+<VFileName V4 QL> 1 "source_files\GearShifter.can" 
+1
+D:\Projektarbete\Git\source_files\GearShifter.cbf
+<< default >>
+
+5
+SIM
+ECU 3
+EOF_TITLE_INFO
+
+1
+0
+1
+1
+0
+1
+0
+1 0 3 0 
+SS_BEGIN_COMMON_INFO
+1
+4
+Behavior
+1
+Buses
+1
+Misc
+1
+Timing
+1
+SS_END_COMMON_INFO
+
+EOF_MBSSDATA
+1
+0 1
+0
+EOF_NLDATA
+0
+EOF_ASSEMBLYDATA
+<VFileName V4 QL> 1 "source_files\GearShifter.cbf" 
+VIPBStackSetting 8 Begin_Of_Object
+3
+2
+0
+0
+1
+0
+End_Of_Object VIPBStackSetting 8
+7
+NULL
+End_Of_Serialized_Data 7
+End_Of_Object VProgrammedNode 7
+0
+0
+Startdelay 0 0 0
+Jitter 0 0 1 0 0 0 0
+0
+EOF_NLDATA
+3
+VSimulinkModelViewerConfiguration 7 Begin_Of_Object
+2
+<VFileName V4 QL> 1 "source_files\" 
+<VFileName V4 QL> 1 "source_files\" 
+<VFileName V4 QL> 1 "source_files\" 
+150
+0
+End_Of_Object VSimulinkModelViewerConfiguration 7
+1
+0
+21622055
+0
+NodeSignalPanelBustypeCount 0
+End_Of_Object VSimulationNode 6
+NULL
+
+EndOfComment
+0
+1
+End_Of_Object VDAOGBFunctionBlock 5
 TABPredecessor:
 0
 TABSuccessor:
@@ -5027,7 +5149,7 @@ VDAOGBFunctionBlock 5 Begin_Of_Object
 2
 0
 TABPredecessor:
-94
+100
 TABSuccessor:
 0
 VCardConf 6 Begin_Of_Object
@@ -5045,7 +5167,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 0 2 59421 1 196 1 2882400001 714 910 212 666 2882400002  0 0 0 0 0 0 1 2882400001 709 709 214 214 2882400002  0 0 0 420287136 425088800 354331348   3 
+1 0 2 59421 1 196 1 2882400001 714 910 212 666 2882400002  0 0 0 0 0 0 1 2882400001 709 709 214 214 2882400002  0 0 0 440433864 382619240 378728492   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -5057,11 +5179,13 @@ CAN
 1
 1
 1
-420794536 1 0 1 0 1 1 0 284 37 2000 1 
+383233896 1 0 1 0 1 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
-2
+3
 Channels
+1
+Databases
 1
 Misc
 1
@@ -5173,7 +5297,7 @@ End_Of_Object VUniqueBox 3
 1 -1 0 0 0 0 0 0 0 0 0 0
 0
 End_Of_Object VNETControlBox 2
-484
+498
 APPDIR Vector.CANoe.NodeSignalPanel.DLL
 Vector.CANoe.NodeSignalPanel, Version=8.2.98.0, Culture=neutral, PublicKeyToken=null
 Vector.CANoe.NodeSignalPanel.VMainApplication
@@ -5198,7 +5322,21 @@ BusType
 1
 Int32
 NodeSelectionCount
-0
+2
+String
+NodeSelectionName0
+1
+receiver_node
+Boolean
+NodeSelectionActive0
+False
+String
+NodeSelectionName1
+1
+send_node
+Boolean
+NodeSelectionActive1
+False
 APPDIR CANoe_Net.DLL
 CANoe_Net, Version=8.2.98.0, Culture=neutral, PublicKeyToken=null
 Vector.CANalyzer.ApplicationSerializer
@@ -5670,7 +5808,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 4 0 1 -1 -1 -1 -1 385 239 1074 541
+1 3 0 1 -1 -1 -1 -1 385 239 1074 541
 Write
 1
 
@@ -5693,7 +5831,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-4
+3
 0
 0
 1
@@ -5774,7 +5912,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 2 3 -32000 -32000 -1 -1 -10000 -10000 -8982 -9233
+22 2 3 -1 -1 -1 -1 -10000 -10000 -8982 -9233
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -5945,7 +6083,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -32000 -32000 -1 -1 756 278 1412 606
+0 1 -1 -1 -1 -1 756 278 1412 606
 1
 1
 0 0
@@ -6185,7 +6323,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -32000 -32000 -1 -1 177 64 709 627
+0 1 -1 -1 -1 -1 177 64 709 627
 1
 1
 0 0
@@ -6415,7 +6553,7 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 0 0 0 0 222 114 890 458
+0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -6437,7 +6575,7 @@ END_OF_DOCK_INFO
 1112 589
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 222 114 890 458
+0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -6452,7 +6590,7 @@ END_OF_DESKTOP_DATA_COLLECTION
 0 1
 1
 6
-0 1 0 0 0 0 222 114 890 458
+0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -6463,7 +6601,7 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 222 114 890 458
+0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -6474,7 +6612,7 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 222 114 890 458
+0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -51882,7 +52020,7 @@ MDI_DOCK_INFO_END
 5
 1
 6
-0 1 0 0 0 0 222 114 890 458
+0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -51904,7 +52042,7 @@ END_OF_DOCK_INFO
 1112 589
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 222 114 890 458
+0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -51919,7 +52057,7 @@ END_OF_DESKTOP_DATA_COLLECTION
 0 1
 1
 6
-0 1 0 0 0 0 222 114 890 458
+0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -51930,7 +52068,7 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 222 114 890 458
+0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
@@ -51941,7 +52079,7 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 0 0 0 0 222 114 890 458
+0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
