--- a/testconfig.cfg
+++ b/testconfig.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|7|1|58869 testconfig 
+;CANoe Version |4|7|1|58852 testconfig 
 Version: 8.2.98 Build 98
 32 PRO
 5
@@ -13,7 +13,7 @@ VGlobalParameters 2 Begin_Of_Object
 21
 1
 3,100,200,500
-1000000 1.000000 0 100 1 1 0 0 1 1 1 0 0 0 1 0 0 0
+1000000 1.000000 1 100 1 1 0 0 1 1 1 0 0 0 1 0 0 0
 1
 0
 1 1
@@ -941,7 +941,7 @@ VDiagnoseBoxRoot 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 1
-1 1 0 1 -1 -1 -1 -1 516 542 1274 1114
+1 4 0 1 -1 -1 -1 -1 516 542 1274 1114
 _952_AGSM_Automatic_Gearbox_Shifter_Module - Diagnostics Console
 1
 
@@ -964,7 +964,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-1
+4
 0
 0
 1
@@ -1095,7 +1095,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 0 0 1 -1 -1 -1 -1 599 0 1099 490
+0 1 0 1 -1 -1 -1 -1 599 0 1099 490
 
 1
 
@@ -1118,7 +1118,7 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-0
+1
 0
 0
 1
@@ -3572,7 +3572,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 4 0 1 -1 -1 -1 -1 -144 82 668 572
+0 0 0 1 -1 -1 -1 -1 -144 82 741 572
 
 1
 
@@ -3591,11 +3591,11 @@ END_OF_DOCK_INFO
 1033 589
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 -144 82 668 572
+0 1 -1 -1 -1 -1 -144 82 741 572
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-4
+0
 0
 0
 1
@@ -3661,7 +3661,7 @@ End_Of_Object VGrMnBox 3
 VDOLocalInfoStruct 3 Begin_Of_Object
 3
 1
-100
+106
 VDAOBus 4 Begin_Of_Object
 1
 1
@@ -4359,7 +4359,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-3141960125
+2554891213
 0
 NodeSignalPanelBustypeCount 0
 End_Of_Object VSimulationNode 6
@@ -4405,12 +4405,14 @@ receiver_node
 1 2 4 0 
 SS_BEGIN_COMMON_INFO
 1
-4
+5
 Behavior
 1
 Buses
 1
 Misc
+1
+Modules
 1
 Timing
 1
@@ -4454,7 +4456,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-2580688642
+2658823676
 0
 NodeSignalPanelBustypeCount 1
 CAN
@@ -5071,7 +5073,7 @@ D:\Projektarbete\Git\source_files\GearShifter.cbf
 SIM
 ECU 3
 EOF_TITLE_INFO
-
+<< default >>
 1
 0
 1
@@ -5130,7 +5132,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-21622055
+2255338367
 0
 NodeSignalPanelBustypeCount 0
 End_Of_Object VSimulationNode 6
@@ -5167,7 +5169,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 0 2 59421 1 196 1 2882400001 714 910 212 666 2882400002  0 0 0 0 0 0 1 2882400001 709 709 214 214 2882400002  0 0 0 440433864 382619240 378728492   3 
+1 0 2 59421 1 196 1 2882400001 787 983 212 666 2882400002  0 0 0 0 0 0 1 2882400001 782 782 214 214 2882400002  0 0 0 377565112 377490160 377249220   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -5179,13 +5181,11 @@ CAN
 1
 1
 1
-383233896 1 0 1 0 1 1 0 0 0 2000 1 
+378131360 1 0 1 0 1 1 0 0 0 2000 1 
 SS_BEGIN_COMMON_INFO
 1
-3
+2
 Channels
-1
-Databases
 1
 Misc
 1
@@ -5808,7 +5808,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 3 0 1 -1 -1 -1 -1 385 239 1074 541
+1 3 0 1 -1 -1 -1 -1 385 82 1074 541
 Write
 1
 
@@ -5827,7 +5827,7 @@ END_OF_DOCK_INFO
 1033 589
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 385 239 1074 541
+0 1 -1 -1 -1 -1 385 82 1074 541
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -6049,7 +6049,7 @@ VScanBaudrateConfiguration 2 Begin_Of_Object
 1
 End_Of_Object VScanBaudrateConfiguration 2
 4
-3
+4
 VPanelBox 2 Begin_Of_Object
 2
 VUniqueBox 3 Begin_Of_Object
@@ -6083,7 +6083,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -1 -1 -1 -1 756 278 1412 606
+0 1 -1 -1 -1 -1 710 339 1366 667
 1
 1
 0 0
@@ -6203,7 +6203,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -1 -1 -1 -1 710 64 997 338
+0 1 -1 -1 -1 -1 380 131 667 450
 1
 1
 0 0
@@ -6395,6 +6395,126 @@ VPanelAdapter 3 Begin_Of_Object
 1
 0
 1650804224
+VPanelInfo 4 Begin_Of_Object
+1
+VPanelActiveX 5 Begin_Of_Object
+1
+4294967295
+0
+<VFileName V4 QL> 1 "" 
+0
+End_Of_Object VPanelActiveX 5
+End_Of_Object VPanelInfo 4
+1
+End_Of_Object VPanelAdapter 3
+
+End_Of_Serialized_Data 2
+End_Of_Object VPanelBox 2
+VPanelBox 2 Begin_Of_Object
+2
+VUniqueBox 3 Begin_Of_Object
+1
+VBoxRoot 4 Begin_Of_Object
+1
+3
+1 -1 0 1 0 0 0 0 219 114 876 458
+GearShifter
+1
+
+MDI_DOCK_INFO_END
+5
+1
+6
+0 1 -1 -1 -1 -1 0 0 496 308
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 0 0 500 312
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 2 22 498 330
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+1
+-1
+1
+0 1 -32000 -32000 -1 -1 127 131 623 439
+1
+1
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 4 44 500 352
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 4 44 504 356
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+0 1
+1
+6
+0 1 -1 -1 -1 -1 6 66 502 374
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 6 66 506 378
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 8 88 504 396
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 8 88 508 400
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 10 110 506 418
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 10 110 510 422
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+END_OF_DESKTOP_MEMBER
+{784FC1A9-B722-4497-8E11-5C62D1629D31}
+0
+End_Of_Object VBoxRoot 4
+1 -1 0 0 0 0 0 0 0 0 0 0
+End_Of_Object VUniqueBox 3
+2
+VPanelAdapter 3 Begin_Of_Object
+2
+<VFileName V4 QL> 1 "Panel\GearShifter.xvp" 
+1
+0
+0
 VPanelInfo 4 Begin_Of_Object
 1
 VPanelActiveX 5 Begin_Of_Object
