--- a/testconfig.cfg
+++ b/testconfig.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|7|1|58853 testconfig 
+;CANoe Version |4|7|1|42468 testconfig 
 Version: 8.2.98 Build 98
 32 PRO
 5
@@ -941,7 +941,7 @@ VDiagnoseBoxRoot 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 1
-1 3 0 1 -1 -1 -1 -1 516 542 1274 1114
+1 3 0 1 -1 -1 -1 -1 385 542 1143 1114
 _952_AGSM_Automatic_Gearbox_Shifter_Module - Diagnostics Console
 1
 
@@ -960,7 +960,7 @@ END_OF_DOCK_INFO
 0 0
 END_OF_DESKTOP_DATA
 6
-0 1 -1 -1 -1 -1 516 542 1274 1114
+0 1 -1 -1 -1 -1 385 542 1143 1114
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
@@ -1021,6 +1021,7 @@ DisplayParamPosLengthInTrace=0
 ScriptPath=
 DisplayAllParamsInTrace=0
 MaxRequestHistory=10
+RequestHistoryService_0=AGSM_sensor_position_Read
 DisplayPduInParameterList=1
 IsTraceLogging=0
 TraceLogfile=traceLog.txt
@@ -3661,7 +3662,7 @@ End_Of_Object VGrMnBox 3
 VDOLocalInfoStruct 3 Begin_Of_Object
 3
 1
-106
+112
 VDAOBus 4 Begin_Of_Object
 1
 1
@@ -4359,7 +4360,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-2554891213
+3378904278
 0
 NodeSignalPanelBustypeCount 0
 End_Of_Object VSimulationNode 6
@@ -4456,7 +4457,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-2658823676
+2958111355
 0
 NodeSignalPanelBustypeCount 1
 CAN
@@ -5132,7 +5133,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-1785952317
+2772059425
 0
 NodeSignalPanelBustypeCount 0
 End_Of_Object VSimulationNode 6
@@ -5169,7 +5170,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 0 2 59421 1 196 1 2882400001 787 983 212 666 2882400002  0 0 0 0 0 0 1 2882400001 782 782 214 214 2882400002  0 0 0 377568272 377490160 377249220   3 
+1 0 2 59421 1 196 1 2882400001 787 983 212 666 2882400002  0 0 0 0 0 0 1 2882400001 782 782 214 214 2882400002  0 0 0 381704304 381777840 374398388   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -5181,11 +5182,13 @@ CAN
 1
 1
 1
-378131360 1 0 1 0 1 1 0 128 0 2000 1 
+382317896 1 0 1 0 1 1 0 128 37 2000 1 
 SS_BEGIN_COMMON_INFO
 1
-2
+3
 Channels
+1
+Databases
 1
 Misc
 1
@@ -6083,7 +6086,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -1 -1 -1 -1 710 339 1366 667
+0 1 -1 -1 -1 -1 700 391 1356 719
 1
 1
 0 0
@@ -6203,7 +6206,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -1 -1 -1 -1 380 131 667 450
+0 1 -1 -1 -1 -1 212 199 499 518
 1
 1
 0 0
@@ -6323,7 +6326,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -1 -1 -1 -1 177 64 709 627
+0 1 -1 -1 -1 -1 167 71 699 634
 1
 1
 0 0
@@ -6443,7 +6446,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -1 -1 -1 -1 127 131 623 439
+0 1 -1 -1 -1 -1 988 82 1317 390
 1
 1
 0 0
