Made several changes: -Added always on/off to ESP, -Fixed problem with print state, -Updated code t follow coding standard, -Added horizontal magnet

--- a/testconfig.cfg
+++ b/testconfig.cfg
@@ -1,4 +1,4 @@
-;CANoe Version |4|7|1|58864 testconfig 
+;CANoe Version |4|7|1|58852 testconfig 
 Version: 8.2.98 Build 98
 32 PRO
 5
@@ -3662,7 +3662,7 @@ End_Of_Object VGrMnBox 3
 VDOLocalInfoStruct 3 Begin_Of_Object
 3
 1
-130
+136
 VDAOBus 4 Begin_Of_Object
 1
 1
@@ -4360,7 +4360,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-3378904278
+1889470918
 0
 NodeSignalPanelBustypeCount 0
 End_Of_Object VSimulationNode 6
@@ -4457,7 +4457,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-2958111355
+1298629315
 0
 NodeSignalPanelBustypeCount 1
 CAN
@@ -5133,7 +5133,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-3313595414
+4074422912
 0
 NodeSignalPanelBustypeCount 0
 End_Of_Object VSimulationNode 6
@@ -5170,7 +5170,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 0 2 59421 1 196 1 2882400001 787 983 212 666 2882400002  0 0 0 0 0 0 1 2882400001 782 782 214 214 2882400002  0 0 0 386884840 386808144 379514700   3 
+1 0 2 59421 1 196 1 2882400001 787 983 212 666 2882400002  0 0 0 0 0 0 1 2882400001 782 782 214 214 2882400002  0 0 0 385964296 385890760 378596644   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -5182,11 +5182,13 @@ CAN
 1
 1
 1
-387134240 1 0 1 0 1 1 0 128 13 2000 1 
+386234440 1 0 1 0 1 1 0 128 13 2000 1 
 SS_BEGIN_COMMON_INFO
 1
-2
+3
 Channels
+1
+Databases
 1
 Misc
 1
@@ -5913,7 +5915,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 2 3 -1 -1 -1 -1 -10000 -10000 -8982 -9233
+22 2 3 -32000 -32000 -1 -1 0 0 1018 737
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -6432,7 +6434,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 2 -32000 -32000 -1 -1 988 82 1317 390
+0 1 -32000 -32000 -1 -1 988 82 1317 390
 1
 1
 0 0
